--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 0.6.3
+version: 0.6.9
 
 environment:
   sdk: ">=2.16.2 <3.0.0"
@@ -40,6 +40,7 @@ dependencies:
   flutter_local_notifications: ^9.7.0
   flutter_ringtone_player: ^3.2.0
   awesome_notifications: ^0.6.21
+  android_alarm_manager_plus: ^2.0.6+1
   
 
   
